<resources>
    <string name="app_name">Medicheck</string>
    <string name="connection">Connection</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="email">esmt@esmt.sn</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="medical_file">Dossier médical</string>
    <string name="doctor">Docteur</string>
    <string name="hospital">Hopital</string>
    <string name="error_field">Champs obligatoires</string>
    <string name="error_connection">Erreur de connection</string>
    <string name="error_parameters">Paramètres incorrects</string>
    <string name="error_inscription">Inscription échouée</string>
    <string name="success_inscription">Inscription réussie</string>
    <string name="title_activity_patient_nav">PatientNavActivity</string>
    <string name="navigation_drawer_open">Ouvrir volet de navigation</string>
    <string name="navigation_drawer_close">Fermer volet de navigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="menu_home">Accueil</string>
    <string name="patient">Patients</string>
    <string name="consultation">Consultation</string>
    <string name="appointment">Rendez-vous</string>
    <string name="help">Aide</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="reason">Motif</string>
    <string name="date">Sélectionnez une Date</string>
    <string name="add_patient">Ajouter un patient</string>
    <string name="add_appointment">Ajouter un rendez-vous</string>
    <string name="add_consultation">Ajouter une consultation</string>
    <string name="add_medical_file">saisir le dossier médical</string>
    <string name="alter">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="day">Jour</string>
    <string name="month">Mois</string>
    <string name="year">Année</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="admin">Admin login</string>
    <string name="success">Ajout réussit</string>
    <string name="picksexe">choisir genre</string>
    <string name="nom">nom</string>
    <string name="prenom">prenom</string>
    <string name="error_field_login">login deja utilisé. Veuillez changer de login.</string>
    <string name="help_header_1">1. Modifier son dossier médical, rendez-vous ou consultation</string>
    <string name="help_header_2">2. Login ou mot de passe oublié</string>
    <string name="help_header_3">3.Report ou annulation des rendez-vous</string>
    <string name="help_body_1">Afin de modifier son dossier , rendez-vous ou bien consultation , il est nécessaire de contacter l administrateur du système.
    Des mises à jour futures vous permettront de faire vos réclamations directement au niveau de l hopital concerné.
    </string>
    <string name="help_body_2">Votre login et votre mot de passe vous sont automatiquement attribués par l administrateur, en cas d oubli veuillez donc le contacter</string>
    <string name="help_body_3">En cas de report ou d annulation de votre rendez-vous, l hopital en charge sera chargé de vous notifier à l aide d un sms</string>
    <string name="home_head">Bienvenue et merci d utiliser Medicheck !!!!</string>
    <string name="home_body">Medicheck est une appli vous permettant de gérer efficacement vos rendez-vous et consultations dans
    nos différents hopitaux partenaires.
    </string>
    <string name="list_appointment">liste rendez_vous</string>
    <string name="list_consultation">liste consultation</string>
    <string name="press_for_more_details">press for more details</string>
    <string name="consulation_press_admin">press to add Appointment or edit consultation</string>
    <string name="appointment_press_admin">press to manage appointment</string>
    <string name="inser_poids">Entrez le poids</string>
    <string name="date_Naissance">"Selectionner date de naissance "</string>
    <string name="Welcome">Bienvenue </string>
</resources>