<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_medical_file"
            android:icon="@drawable/ic_medical_file"
            android:title="@string/medical_file" />

        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/ic_consultation"
            android:title="@string/consultation" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_appointment"
            android:title="@string/appointment" />
        <item
            android:id="@+id/nav_hospital"
            android:icon="@drawable/ic_hospital"
            android:title="@string/hospital" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
    </group>
</menu>