<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.medicheck.patient.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_patient"
        android:name="com.android.medicheck.patient.PatientsFragment"
        android:label="@string/patient"
        tools:layout="@layout/fragment_patients" />

    <fragment
        android:id="@+id/nav_consultation"
        android:name="com.android.medicheck.patient.ConsultationFragment"
        android:label="@string/consultation"
        tools:layout="@layout/fragment_consultation" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.android.medicheck.patient.AppointmentFragment"
        android:label="@string/appointment"
        tools:layout="@layout/fragment_appointment" />

    <fragment
        android:id="@+id/nav_hospital"
        android:name="com.android.medicheck.patient.HospitalFragment"
        android:label="@string/hospital"
        tools:layout="@layout/fragment_hospital" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.android.medicheck.patient.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
</navigation>