<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_appointment_admin"
            android:icon="@drawable/ic_appointment"
            android:title="@string/appointment" />
        <item
            android:id="@+id/nav_consultation_admin"
            android:icon="@drawable/ic_consultation"
            android:title="@string/consultation" />
        <item
            android:id="@+id/nav_patient_admin"
            android:icon="@drawable/ic_patient"
            android:title="@string/patient" />
    </group>
</menu>