<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".commons.HelpFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/top"
        android:backgroundTint="@color/ic_launcher_background"
        android:src="@drawable/ic_help"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/top"
        android:layout_marginTop="@dimen/top"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_header_1"
        android:textColor="@color/teal_700"
        android:padding="5dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_body_1"
        android:padding="7dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_header_2"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_body_2"
        android:padding="7dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_header_3"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_body_3"
        android:padding="7dp"
        />
    </LinearLayout>
</LinearLayout>