<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/all"
    tools:context=".MainActivity">

    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/title"
        android:gravity="center"
        android:text="@string/add_patient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/nom"
        android:minHeight="48dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPrenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/prenom"
        android:minHeight="48dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/login"
        android:minHeight="48dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnAddPatient"
        android:backgroundTint="@color/blue_dark"
        android:layout_marginEnd="@dimen/right"
        android:layout_marginStart="@dimen/left"
        android:layout_marginTop="@dimen/top"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>