<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.medicheck.admin.homeAdminFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_user" />

    <fragment
        android:id="@+id/nav_appointment_admin"
        android:name="com.android.medicheck.admin.AppointmentAdminFragment"
        android:label="@string/appointment"
        tools:layout="@layout/fragment_appointment_admin" />

    <fragment
        android:id="@+id/nav_consultation_admin"
        android:name="com.android.medicheck.admin.ConsultationAdminFragment"
        android:label="@string/consultation"
        tools:layout="@layout/fragment_consultation_admin" />

    <fragment
        android:id="@+id/nav_patient_admin"
        android:name="com.android.medicheck.admin.PatientAdminFragment"
        android:label="@string/patient"
        tools:layout="@layout/fragment_patient_admin" />


</navigation>