<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.AddAppointmentFragment">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:text="@string/add_appointment"
        android:textColor="@color/teal_700"
        android:layout_marginBottom="5mm"
        android:layout_margin="@dimen/all"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:gravity="center"
        android:layout_marginBottom="5mm"
        android:textSize="20sp"
        android:background="@android:drawable/btn_dropdown"
        android:textColor="@color/black"
        android:layout_margin="@dimen/all"
        android:padding="5dp"
        />


    <EditText
        android:id="@+id/txtMotif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3mm"
        android:hint="@string/reason"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_margin="@dimen/all"/>

    <Button
        android:id="@+id/btnSaveAppointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="@dimen/all"
        />
</LinearLayout>