<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.AddConsultationFragment">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:text="@string/add_consultation"
        android:textColor="@color/teal_700"
        android:layout_marginBottom="5mm"
        android:layout_margin="@dimen/all"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_Naissance"
        android:elevation="@dimen/top"
        android:background="@android:drawable/btn_dropdown"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="5mm"
        android:textSize="20sp"
        android:layout_margin="@dimen/all"
        android:padding="5dp"
        />

    <Spinner
        android:id="@+id/medecin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_margin="@dimen/all"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/txtMotifConsultation"
        android:hint="@string/reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="@dimen/all"
        />

    <Button
        android:id="@+id/btnSaveConsultation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="@dimen/all"
        />

</LinearLayout>