<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/all"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:elevation="200dp"
        android:src="@drawable/ic_launcher_round"/>
    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/title"
        android:gravity="center"
        android:text="@string/Welcome"
        android:fontFamily="cursive"
        android:textColor="@color/teal_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"/>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColorHint="@color/teal_700"
        android:textColor="@color/teal_700"
        android:minHeight="48dp"
        android:autofillHints=""
        android:inputType="text"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/teal_700"
        android:minHeight="48dp"
        android:textColorHint="@color/teal_700"
        android:autofillHints=""
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnConnect"
        android:backgroundTint="@color/teal_700"
        android:layout_marginEnd="@dimen/right"
        android:layout_marginStart="@dimen/left"
        android:layout_marginTop="@dimen/top"
        android:text="@string/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>