<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.AddMedicalFileFragment">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:text="@string/add_medical_file"
        android:layout_marginBottom="5mm"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:gravity="center"
        android:layout_marginBottom="5mm"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/txtPoids"
        android:hint="Entrez le poids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="3mm"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtSexe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/picksexe"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/listSexe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtSexe"
            app:layout_constraintTop_toTopOf="@+id/txtSexe" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnSaveDossier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />

</LinearLayout>